Subiendo cambios del trabajo de lenguaje de marcas

--- a/Lenguaje de Marcas/Practicas/ifrmaset/4_index.html
+++ b/Lenguaje de Marcas/Practicas/ifrmaset/4_index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="Stilos.css">
 </head>
 <body style="background-color: #F5F5F5;">
   <h1 style="color:#E53935;" align="center">Bienvenidos a EnergyFit</h1>
@@ -25,7 +26,7 @@ Contamos con entrenadores profesionales, amplios horarios y una gran variedad de
 <b>¡Ven a conocernos y empieza hoy mismo a transformar tu cuerpo y tu mente!</b>
 </p>
 <div align="center">
-  <img src="Imagenes/istockphoto-2075354173-612x612.jpg" 
+  <img src="Imagenes/istockphoto-2075354173-612x612.jpg"
        title="¡Actívate con EnergyFit!"
        alt="Personas entrenando en EnergyFit"
        width="500"
