--- a/Lenguaje de Marcas/Practicas/ifrmaset/5_quienes_somos.html
+++ b/Lenguaje de Marcas/Practicas/ifrmaset/5_quienes_somos.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="Stilos.css">
 </head>
 <body style="background-color:#F5F5F5 ;">
  <h1 style="color:#E53935;" align="center">Quiénes Somos</h1>
@@ -26,8 +27,8 @@ Apostamos por la <b>cercanía, la motivación y el acompañamiento personalizado
 </p>
 
 <div align="center">
-  <img src="Imagenes/Quienes somos.png" 
-       alt="Equipo de entrenadores EnergyFit" 
+  <img src="Imagenes/Quienes somos.png"
+       alt="Equipo de entrenadores EnergyFit"
        title="Nuestro equipo EnergyFit"
        width="500"
        border="2">
