--- a/Lenguaje de Marcas/Practicas/ifrmaset/9_donde_estamos.html
+++ b/Lenguaje de Marcas/Practicas/ifrmaset/9_donde_estamos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="Stilos.css">
 </head>
 <body style="background-color:#F5F5F5;">
     <h1 style="color: #E53935;" align="center">Donde Estamos Ubicados</h1>
