--- a/Lenguaje de Marcas/Practicas/ifrmaset/11_datos_recibidos.html
+++ b/Lenguaje de Marcas/Practicas/ifrmaset/11_datos_recibidos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Confirmación - EnergyFit</title>
+    <link rel="stylesheet" href="Stilos.css">
 </head>
 <body style="background-color:#F5F5F5; text-align:center;">
 
