--- a/Lenguaje de Marcas/Practicas/ifrmaset/2_cabecera.html
+++ b/Lenguaje de Marcas/Practicas/ifrmaset/2_cabecera.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="Stilos.css">
 </head>
-<body style="background-color: #212121;">
+<body class="Cabecera">
     <img src="Imagenes/ChatGPT Image 22 oct 2025, 15_57_25.png" height="100">
 </body>
 </html>
