--- a/Lenguaje de Marcas/Practicas/ifrmaset/3_menu.html
+++ b/Lenguaje de Marcas/Practicas/ifrmaset/3_menu.html
@@ -4,18 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="Stilos.css">
 </head>
-<body style="background-color: #F5F5F5;">
+<body class="Menu">
 <h3>Menu</h3>
-<ul>
-    <li><a href="4_index.html" target="Contenido">Inicio</a></li>
-    <li><a href="6_actividades.html" target="Contenido">Actividades</a></li>
-    <li><a href="5_quienes_somos.html" target="Contenido">Quienes Somos</a></li>
-    <li><a href="7_cuotas.html" target="Contenido">Cuotas</a></li>
-    <li><a href="8_salas.html" target="Contenido">Salas</a></li>
-    <li><a href="9_donde_estamos.html" target="Contenido">Donde estamos</a></li>
-    <li><a href="10_contacto.html" target="Contenido">Contacto</a></li>
-</ol>
-    
+<div class="MenuHorizontal">
+    <div>
+        <ul>
+            <li><a href=""></a>
+            </li>
+    <a href="4_index.html" target="Contenido">Inicio</a>
+    <a href="6_actividades.html" target="Contenido">Actividades</a>
+    <a href="5_quienes_somos.html" target="Contenido">Quienes Somos</a>
+    <a href="7_cuotas.html" target="Contenido">Cuotas</a>
+    <a href="8_salas.html" target="Contenido">Salas</a>
+    <a href="9_donde_estamos.html" target="Contenido">Donde estamos</a>
+    <a href="10_contacto.html" target="Contenido">Contacto</a>
+    </div>
+</div>
+
 </body>
 </html>
