--- a/Lenguaje de Marcas/Practicas/ifrmaset/12_politica_privacidad.html
+++ b/Lenguaje de Marcas/Practicas/ifrmaset/12_politica_privacidad.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="Stilos.css">
+<meta charset="UTF-8">
+<link rel="stylesheet" href="Stilos.css">
 </head>
-<body style="background-color: #F5F5F5;">
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <h1 align="center">ESTA ES
-LA SECCIÓN DE POLÍTICA DE PRIVACIDAD DE LA WEB DE NUESTRO ESTABLECIMIENTO
-DEPORTIVO. DESARROLLADA EN EL MÓDULO DE LENGUAJES DE MARCAS Y SISTEMAS DE
-GESTIÓN DE INFORMACIÓN POR: <br><br><strong>DIEGO ARMANDO MAYOR RODRIGUEZ 1-DAM</strong></h1>
+
+<body class="contenido">
+
+<h1>Política de Privacidad</h1>
+
+<p>
+Sección desarrollada para la práctica de Lenguajes de Marcas.
+</p>
+
 </body>
 </html>
