--- a/Lenguaje de Marcas/Practicas/ifrmaset/3_menu.html
+++ b/Lenguaje de Marcas/Practicas/ifrmaset/3_menu.html
@@ -1,26 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="Stilos.css">
+<meta charset="UTF-8">
+<link rel="stylesheet" href="Stilos.css">
 </head>
+
 <body class="Menu">
-<h3>Menu</h3>
+
 <div class="MenuHorizontal">
-    <div>
+<ul>
+    <li><a href="4_index.html" target="Contenido">Inicio</a></li>
+
+    <li>Centro
         <ul>
-            <li><a href=""></a>
-            </li>
-    <a href="4_index.html" target="Contenido">Inicio</a>
-    <a href="6_actividades.html" target="Contenido">Actividades</a>
-    <a href="5_quienes_somos.html" target="Contenido">Quienes Somos</a>
-    <a href="7_cuotas.html" target="Contenido">Cuotas</a>
-    <a href="8_salas.html" target="Contenido">Salas</a>
-    <a href="9_donde_estamos.html" target="Contenido">Donde estamos</a>
-    <a href="10_contacto.html" target="Contenido">Contacto</a>
-    </div>
+            <li><a href="5_quienes_somos.html" target="Contenido">Quiénes somos</a></li>
+            <li><a href="#">Equipo</a></li>
+        </ul>
+    </li>
+
+    <li>Servicios
+        <ul>
+            <li><a href="6_actividades.html" target="Contenido">Actividades</a></li>
+            <li><a href="#">Entrenamientos</a></li>
+        </ul>
+    </li>
+
+    <li><a href="7_cuotas.html" target="Contenido">Cuotas</a></li>
+    <li><a href="8_salas.html" target="Contenido">Salas</a></li>
+    <li><a href="9_donde_estamos.html" target="Contenido">Dónde estamos</a></li>
+    <li><a href="10_contacto.html" target="Contenido">Contacto</a></li>
+</ul>
 </div>
 
 </body>
