--- a/Lenguaje de Marcas/Practicas/ifrmaset/6_actividades.html
+++ b/Lenguaje de Marcas/Practicas/ifrmaset/6_actividades.html
@@ -1,42 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="Stilos.css">
+<meta charset="UTF-8">
+<link rel="stylesheet" href="Stilos.css">
 </head>
-<body sstyle="background-color: #F5F5F5;">
-  <h1 style="color:#E53935;" align="center">🏋️‍♀️ Nuestras Actividades Deportivas 🏋️‍♀️</h1>
-<br><br>
-<table border="1" align="center" cellpadding="10">
-  <tr>
-    <td><img src="Imagenes/spining.jpg" height="400">
-      <p><strong>Spinning:</strong> Ejercicio cardiovascular en bicicleta estática con música y ritmo. Ideal para mejorar la resistencia y quemar calorías.</p>
-    </td>
-    <td><img src="Imagenes/zumba.jpg" height="400">
-      <p><strong>Zumba:</strong> Combina baile y ejercicio aeróbico. ¡Diviértete mientras te pones en forma! </p></td>
-  </tr>
 
-  <tr>
-    <td><img src="Imagenes/yoga.jpg" height="400">
-      <strong>Yoga:</strong> Conecta cuerpo y mente a través de la respiración, la relajación y las posturas físicas.</td>
-    <td><img src="Imagenes/pilates.jpg"><p><strong>Pilates:</strong>Fortalece tu zona abdominal, mejora la postura y aumenta la flexibilidad.</p></td>
-  </tr>
+<body class="contenido">
 
-  <tr>
-    <td><img src="Imagenes/crossfit.jpg" height="400"><p><strong>Crossfit:</strong>Entrenamiento de alta intensidad con movimientos funcionales. Perfecto para quienes buscan superar sus límites.</p>
-    </td>
+<h1>Nuestras Actividades Deportivas</h1>
 
-    <td><img src="Imagenes/natacion.jpg" height="400"><p><strong>Natacion:</strong>Actividad completa que trabaja todo el cuerpo, mejora la respiración y reduce el estrés.</p>
-    </td>
-  </tr>
+<table border="1">
+<tr>
+<td>Spinning</td>
+<td>Zumba</td>
+</tr>
+<tr>
+<td>Yoga</td>
+<td>Pilates</td>
+</tr>
+<tr>
+<td>Crossfit</td>
+<td>Natación</td>
+</tr>
 </table>
 
 <hr>
-<p align="center">
-  <a href="12_politica_privacidad.html" target="_blank">Política de privacidad</a> |
-  <a href="13_aviso_legal.html" target="_blank">Aviso legal</a>
+<p>
+<a href="12_politica_privacidad.html" target="Contenido">Política de privacidad</a> |
+<a href="13_aviso_legal.html" target="Contenido">Aviso legal</a>
 </p>
+
 </body>
 </html>
