--- a/Lenguaje de Marcas/Practicas/ifrmaset/8_salas.html
+++ b/Lenguaje de Marcas/Practicas/ifrmaset/8_salas.html
@@ -1,40 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="Stilos.css">
+<meta charset="UTF-8">
+<link rel="stylesheet" href="Stilos.css">
 </head>
-<body style="background-color:#F5F5F5; text-align:justify;">
 
-    <h1 style="color:#E53935;"  align="center">🏢 SALAS E INSTALACIONES</h1>
+<body class="contenido">
 
-    <p>Nuestro centro cuenta con modernas instalaciones equipadas con la última tecnología en fitness:
-    </p>
+<h1>Salas e Instalaciones</h1>
 
-    <ul>
-  <li>💪 Sala de musculación de última generación</li>
-  <li>🚴 Sala de cardio con cintas, elípticas y bicicletas</li>
-  <li>🧘 Salas polivalentes para clases dirigidas</li>
-  <li>🏊 Piscina climatizada</li>
-  <li>🧖 Zona de spa y sauna</li>
-  <li>☕ Cafetería y tienda deportivas</li>
+<ul>
+<li>💪 Sala de musculación de última generación</li>
+<li>🚴 Sala de cardio con cintas, elípticas y bicicletas</li>
+<li>🧘 Salas polivalentes para clases dirigidas</li>
+<li>🏊 Piscina climatizada</li>
+<li>🧖 Zona de spa y sauna</li>
+<li>☕ Cafetería y tienda deportivas</li>
 </ul>
 
-<p align="center">
-  <img src="Imagenes/Salas.png" alt="Instalaciones EnergyFit" width="600">
+<img src="Imagenes/Salas.png" width="500">
+
+<p>Todo diseñado para que disfrutes al máximo tu experiencia deportiva.</p>
+
+<hr>
+<p>
+<a href="12_politica_privacidad.html" target="Contenido">Política de privacidad</a> |
+<a href="13_aviso_legal.html" target="Contenido">Aviso legal</a>
 </p>
-
-  <p align="center">Todo diseñado para que disfrutes al maximo tu experiencia deportiva.</p>
-
-  <hr>
-<p align="center">
-  <a href="12_politica_privacidad.html" target="_blank">Política de privacidad</a> |
-  <a href="13_aviso_legal.html" target="_blank">Aviso legal</a>
-</p>
-
-
 
 </body>
 </html>
