--- a/Lenguaje de Marcas/Practicas/ifrmaset/11_datos_recibidos.html
+++ b/Lenguaje de Marcas/Practicas/ifrmaset/11_datos_recibidos.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Confirmación - EnergyFit</title>
-    <link rel="stylesheet" href="Stilos.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Confirmación - EnergyFit</title>
+<link rel="stylesheet" href="Stilos.css">
 </head>
-<body style="background-color:#F5F5F5; text-align:center;">
 
-<h1 style="color:#E53935;">✅ Sus datos han sido recibidos correctamente.</h1>
+<body class="contenido">
+
+<h1>✅ Sus datos han sido recibidos correctamente.</h1>
 <p>En breve nos pondremos en contacto con usted.<br>
 Gracias por confiar en <strong>EnergyFit</strong> 💪</p>
 
