--- a/Lenguaje de Marcas/Practicas/ifrmaset/13_aviso_legal.html
+++ b/Lenguaje de Marcas/Practicas/ifrmaset/13_aviso_legal.html
@@ -1,49 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="Stilos.css">
+<meta charset="UTF-8">
+<link rel="stylesheet" href="Stilos.css">
 </head>
-<body style="background-color: #F5F5F5;">
-    <h1 align="center">Condiciones de uso del portal</h1>
 
-    <h2 align="justify">Condiciones de uso de servicios</h2>
+<body class="contenido">
 
-    <ol>
-        <li>Objeto</li><br>
-        <p>Los términos y condiciones que más adelante se indican (en adelante política, condiciones generales o condiciones) regulan el uso del servicio El Portal Educativo (en adelante también portal, sitio, sitio web o Portaledu) que la Conselleria de Educación, Cultura, Universidades y Empleo (en adelante, también Conselleria o Conselleria de Educación, en todo caso haciendo referencia a la Conselleria de la Generalitat Valenciana con las competencias en educación) pone a disposición del profesorado en activo. El Portal Educativo se reserva el derecho a modificar, en cualquier momento y sin aviso previo, la presentación, la configuración y el contenido del servicio, así como también las condiciones requeridas para utilizar el servicio.</p>
-        <li>Alcance de esta política</li>
-        <p>Dentro de la expresión «portal, sitio o sitio web» se comprenden -con carácter delimitativo pero no limitativo- los datos, textos, gráficos, imágenes, animaciones, creaciones musicales, vídeos, sonidos, dibujos, fotografías y otros incluidos en el mismo, y, en general, todas las creaciones expresadas por cualquier medio o soporte, tangible o intangible, con independencia de que sean susceptibles o no de propiedad intelectual e industrial de acuerdo con las normas vigentes aplicables.</p>
-        <li>Aceptación de esta política</li>
-        <p>El acceso y uso de este sitio se realiza por la persona usuaria bajo su única y exclusiva responsabilidad.
+<h1>Aviso Legal</h1>
 
-Se adquiere la condición de usuario y/o usuaria del sitio mediante el acceso al sitio web, momento a partir del cual la persona usuaria queda vinculada al uso de los servicios y contenidos publicados de acuerdo con lo establecido en las leyes aplicables, la presente política y en los distintos textos legales publicados en el sitio.
+<ul>
+<li><a href="#objeto">Objeto</a></li>
+<li><a href="#uso">Condiciones de uso</a></li>
+</ul>
 
-La utilización del contenido y/o servicios del portal por parte de la persona usuaria supone la aceptación expresa de la presente política en su totalidad.</p>
-        <li>Condiciones de uso del portal</li>
-        <p>La persona usuaria solo puede disfrutar y utilizar este sitio:
+<h2 id="objeto">Objeto</h2>
+<p>Condiciones legales del sitio web.</p>
 
-– Con fines lícitos y no lesivos de derechos y libertades de terceros, o que puedan perjudicar, dañar o impedir por cualquier forma el acceso a los mismos, en perjuicio de la Conselleria o de terceros.
+<h2 id="uso">Condiciones de uso</h2>
+<p>Uso correcto del portal.</p>
 
-– Respetando los derechos –y muy especialmente los derechos fundamentales y libertades públicas- de otros terceros.
-
-– Sin incitar ni promover la realización de actos delictivos, xenófobos, terroristas o degradantes por razón de edad, sexo, religión o creencias; o de carácter pornográfico, obsceno, violento o que atenten contra la ley, la moral o las buenas costumbres.
-
-– Sin incluir hipervínculos en sus páginas web particulares o comerciales a este sitio web que no se limiten única y exclusivamente al acceso a la página principal del mismo.
-
-– De acuerdo con las presentes condiciones u otros textos legales publicados en el sitio.
-
-Queda prohibido utilizar este sitio:
-
-– Como vía de acceso a Internet para la comisión de acciones ilícitas o contrarias a la legislación vigente, la moral, las buenas costumbres y el orden público.
-
-– Empleando cualquier tipo de virus informático, código, software, programa informático, equipo informático o de telecomunicaciones, que puedan provocar daños o alteraciones no autorizadas de los contenidos, programas o sistemas accesibles a través de los servicios y contenidos prestados en el sitio web o en los sistemas de información, archivos y equipos informáticos de los usuarios del sitio; o el acceso no autorizado a cualquier tipo de contenidos y/o servicios del sitio web.
-
-– Eliminando o modificando de cualquier modo los dispositivos de protección o identificación de la Conselleria o sus legítimos titulares que puedan contener los contenidos alojados en el sitio web, o los símbolos que la Conselleria o los terceros legítimos titulares de los derechos incorporen a sus creaciones objeto de propiedad intelectual o industrial existentes en este sitio web.
-
-– Utilizando la marca, nombres comerciales, así como cualquier otro signo identificativo que se encuentre sujeto a derechos de propiedad intelectual o industrial, sin la previa autorización expresa y por escrito de su propietario.</p>
-    </ol>
 </body>
 </html>
