--- a/Lenguaje de Marcas/Practicas/ifrmaset/1_principal.html
+++ b/Lenguaje de Marcas/Practicas/ifrmaset/1_principal.html
@@ -1,19 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>EnergyFit - Tu centro deportivo</title>
+<title>EnergyFit - Tu centro deportivo</title>
 </head>
-
-<!-- Dividimos en 2 filas: cabecera + resto -->
-<frameset rows="120,*" border="3" bordercolor="#E53935">
-  <!-- Cabecera -->
-  <frame src="2_cabecera.html" name="cabecera" noresize scrolling="no">
-
-  <!-- Dentro del resto: menú a la izquierda y contenido a la derecha -->
-  <frameset cols="220,*" border="3">
-    <frame src="3_menu.html" name="menu" noresize>
-    <frame src="4_index.html" name="Contenido">
-  </frameset>
-
+<frameset rows="120,90,*" border="2" bordercolor="#E53935" framespacing="0">
+  <frame src="2_cabecera.html" name="cabecera" noresize scrolling="no" frameborder="0">
+  <frame src="3_menu.html" name="menu" noresize scrolling="no" frameborder="0" style="overflow: visible;">
+  <frame src="4_index.html" name="Contenido" frameborder="0">
 </frameset>
 </html>
