--- a/Lenguaje de Marcas/Practicas/ifrmaset/4_index.html
+++ b/Lenguaje de Marcas/Practicas/ifrmaset/4_index.html
@@ -1,47 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="Stilos.css">
+<meta charset="UTF-8">
+<title>Document</title>
+<link rel="stylesheet" href="Stilos.css">
 </head>
-<body style="background-color: #F5F5F5;">
-  <h1 style="color:#E53935;" align="center">Bienvenidos a EnergyFit</h1>
-<h3 style="color:#212121;" align="center">Tu centro deportivo de confianza</h3>
 
-  <p align="justify">
+<body class="contenido">
+
+<h1>Bienvenidos a EnergyFit</h1>
+<h3>Tu centro deportivo de confianza</h3>
+
+<p>
 En EnergyFit te ayudamos a alcanzar tus metas personales de salud, fuerza y bienestar.
 </p>
 
-<p align="justify">
+<p>
 En nuestra web encontrarás toda la información sobre nuestras actividades, servicios, instalaciones y cómo ponerte en contacto con nosotros.
 </p>
 
-<p align="justify">
+<p>
 Contamos con entrenadores profesionales, amplios horarios y una gran variedad de disciplinas deportivas para que encuentres la que mejor se adapte a ti.
 </p>
 
-<p align="justify">
+<p>
 <b>¡Ven a conocernos y empieza hoy mismo a transformar tu cuerpo y tu mente!</b>
 </p>
-<div align="center">
+
+<div>
   <img src="Imagenes/istockphoto-2075354173-612x612.jpg"
        title="¡Actívate con EnergyFit!"
        alt="Personas entrenando en EnergyFit"
-       width="500"
-       border="2">
+       width="500">
   <p><b>¡Actívate con EnergyFit!</b></p>
 </div>
 
-<p align="center"><i>“La energía no se crea ni se destruye… ¡se entrena!”</i></p>
+<p><i>“La energía no se crea ni se destruye… ¡se entrena!”</i></p>
 
 <hr>
-<p align="center">
-  <a href="12_politica_privacidad.html" target="_blank">Política de privacidad</a> |
-  <a href="13_aviso_legal.html" target="_blank">Aviso legal</a>
-</p>
 
+<p>
+  <a href="12_politica_privacidad.html" target="Contenido">Política de privacidad</a> |
+  <a href="13_aviso_legal.html" target="Contenido">Aviso legal</a>
+</p>
 
 </body>
 </html>
