--- a/Lenguaje de Marcas/Practicas/ifrmaset/7_cuotas.html
+++ b/Lenguaje de Marcas/Practicas/ifrmaset/7_cuotas.html
@@ -1,54 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="Stilos.css">
+<meta charset="UTF-8">
+<link rel="stylesheet" href="Stilos.css">
 </head>
-<body>
-  <body style="background-color:#F5F5F5; text-align:center;">
 
-  <h1 style="color:#E53935;" align="center">💳 CUOTAS</h1>
+<body class="contenido">
 
-  <p align="center">
-    En EnergyFit te ofrecemos diferentes opciones de membresía para adaptarnos a tus necesidades:
-  </p>
-  <img src="Imagenes/medios de pago .jpg" title="tarjetaso"> <br>
+<h1>Cuotas</h1>
 
-  <table border="1" align="center" cellpadding="10">
-    <tr>
-      <th>Tipo de Membresía</th>
-      <th>Descripción</th>
-    </tr>
-    <tr>
-      <td><strong>Mensual Básico</strong></td>
-      <td>Acceso a gimnasio y vestuarios.</td>
-    </tr>
-    <tr>
-      <td><strong>Mensual Completo</strong></td>
-      <td>Acceso a todas las actividades dirigidas.</td>
-    </tr>
-    <tr>
-      <td><strong>Trimestral Premium</strong></td>
-      <td>Incluye nutricionista y seguimiento personalizado.</td>
-    </tr>
-    <tr>
-      <td><strong>Anual VIP</strong></td>
-      <td>Acceso ilimitado a todas las instalaciones + sesiones mensuales de fisioterapia.</td>
-    </tr>
-  </table>
+<table border="1">
+<tr>
+<th>Membresía</th>
+<th>Descripción</th>
+</tr>
+<tr>
+<td>Mensual Básico</td>
+<td>Acceso a gimnasio y vestuarios.</td>
+</tr>
+<tr>
+<td>Mensual Completo</td>
+<td>Acceso a todas las actividades dirigidas.</td>
+</tr>
+<tr>
+<td>Trimestral Premium</td>
+<td>Incluye nutricionista y seguimiento personalizado.</td>
+</tr>
+<tr>
+<td>Anual VIP</td>
+<td>Acceso ilimitado a todas las instalaciones + sesiones mensuales de fisioterapia.</td>
+</tr>
+</table>
 
-  <br>
-  <p align="center"><strong>¡Cuanto más tiempo te quedes, más ahorras!</strong></p>
-
-
-  <hr>
-<p align="center">
-  <a href="12_politica_privacidad.html" target="_blank">Política de privacidad</a> |
-  <a href="13_aviso_legal.html" target="_blank">Aviso legal</a>
+<hr>
+<p>
+<a href="12_politica_privacidad.html" target="Contenido">Política de privacidad</a> |
+<a href="13_aviso_legal.html" target="Contenido">Aviso legal</a>
 </p>
-</body>
 
 </body>
 </html>
