modificaciones del proyecto de html practica final framese

--- a/Lenguaje de Marcas/Practicas/ifrmaset/11_datos_recibidos.html
+++ b/Lenguaje de Marcas/Practicas/ifrmaset/11_datos_recibidos.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Confirmación - EnergyFit</title>
-<link rel="stylesheet" href="Stilos.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Confirmación - EnergyFit</title>
+  <link rel="stylesheet" href="Stilos.css">
 </head>
 
 <body class="contenido">
 
-<h1>✅ Sus datos han sido recibidos correctamente.</h1>
-<p>En breve nos pondremos en contacto con usted.<br>
-Gracias por confiar en <strong>EnergyFit</strong> 💪</p>
+  <h1>✅ Sus datos han sido recibidos correctamente.</h1>
+  <p class="centrado">
+    En breve nos pondremos en contacto con usted.<br>
+    Gracias por confiar en <strong>EnergyFit</strong> 💪
+  </p>
+
+  <hr>
+
+  <p class="centrado">
+    <a href="12_politica_privacidad.html" target="Contenido">Política de privacidad</a> |
+    <a href="13_aviso_legal.html" target="Contenido">Aviso legal</a>
+  </p>
 
 </body>
 </html>
