--- a/Lenguaje de Marcas/Practicas/ifrmaset/1_principal.html
+++ b/Lenguaje de Marcas/Practicas/ifrmaset/1_principal.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-<title>EnergyFit - Tu centro deportivo</title>
+  <title>EnergyFit - Tu centro deportivo</title>
 </head>
-<frameset rows="120,90,*" border="2" bordercolor="#E53935" framespacing="0">
+
+<frameset rows="120,170,*" border="3" bordercolor="#E53935" framespacing="0">
   <frame src="2_cabecera.html" name="cabecera" noresize scrolling="no" frameborder="0">
-  <frame src="3_menu.html" name="menu" noresize scrolling="no" frameborder="0" style="overflow: visible;">
+  <frame src="3_menu.html" name="menu" noresize scrolling="no" frameborder="0">
   <frame src="4_index.html" name="Contenido" frameborder="0">
 </frameset>
+
 </html>
