--- a/Lenguaje de Marcas/Practicas/ifrmaset/2_cabecera.html
+++ b/Lenguaje de Marcas/Practicas/ifrmaset/2_cabecera.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-<meta charset="UTF-8">
-<link rel="stylesheet" href="Stilos.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cabecera</title>
+  <link rel="stylesheet" href="Stilos.css">
 </head>
+
 <body class="Cabecera">
-    <img src="Imagenes/ChatGPT Image 22 oct 2025, 15_57_25.png" height="100">
+  <img src="Imagenes/ChatGPT Image 22 oct 2025, 15_57_25.png" alt="Logo EnergyFit">
 </body>
 </html>
