--- a/Lenguaje de Marcas/Practicas/ifrmaset/3_menu.html
+++ b/Lenguaje de Marcas/Practicas/ifrmaset/3_menu.html
@@ -1,36 +1,54 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-<meta charset="UTF-8">
-<link rel="stylesheet" href="Stilos.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Menú</title>
+  <link rel="stylesheet" href="Stilos.css">
 </head>
 
 <body class="Menu">
 
-<div class="MenuHorizontal">
-<ul>
-    <li><a href="4_index.html" target="Contenido">Inicio</a></li>
+  <nav class="MenuHorizontal">
+    <ul>
+      <li><a href="4_index.html" target="Contenido">Inicio</a></li>
 
-    <li>Centro
+      <li>
+        <a href="5_quienes_somos.html" target="Contenido">Quienes Somos</a>
         <ul>
-            <li><a href="5_quienes_somos.html" target="Contenido">Quiénes somos</a></li>
-            <li><a href="#">Equipo</a></li>
+          <li><a href="#" onclick="return false;">Misión</a></li>
+          <li><a href="#" onclick="return false;">Equipo</a></li>
         </ul>
-    </li>
+      </li>
 
-    <li>Servicios
+      <li>
+        <a href="6_actividades.html" target="Contenido">Actividades</a>
         <ul>
-            <li><a href="6_actividades.html" target="Contenido">Actividades</a></li>
-            <li><a href="#">Entrenamientos</a></li>
+          <li><a href="#" onclick="return false;">Horarios</a></li>
+          <li><a href="#" onclick="return false;">Eventos</a></li>
         </ul>
-    </li>
+      </li>
 
-    <li><a href="7_cuotas.html" target="Contenido">Cuotas</a></li>
-    <li><a href="8_salas.html" target="Contenido">Salas</a></li>
-    <li><a href="9_donde_estamos.html" target="Contenido">Dónde estamos</a></li>
-    <li><a href="10_contacto.html" target="Contenido">Contacto</a></li>
-</ul>
-</div>
+      <li>
+        <a href="7_cuotas.html" target="Contenido">Cuotas</a>
+        <ul>
+          <li><a href="#" onclick="return false;">Promociones</a></li>
+          <li><a href="#" onclick="return false;">Inscripción</a></li>
+        </ul>
+      </li>
+
+      <li>
+        <a href="8_salas.html" target="Contenido">Salas</a>
+        <ul>
+          <li><a href="#" onclick="return false;">Musculación</a></li>
+          <li><a href="#" onclick="return false;">Cardio</a></li>
+        </ul>
+      </li>
+
+      <li><a href="9_donde_estamos.html" target="Contenido">Donde estamos</a></li>
+      <li><a href="10_contacto.html" target="Contenido">Contacto</a></li>
+    </ul>
+  </nav>
 
 </body>
 </html>
