--- a/Lenguaje de Marcas/Practicas/ifrmaset/4_index.html
+++ b/Lenguaje de Marcas/Practicas/ifrmaset/4_index.html
@@ -1,48 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-<meta charset="UTF-8">
-<title>Document</title>
-<link rel="stylesheet" href="Stilos.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Inicio - EnergyFit</title>
+  <link rel="stylesheet" href="Stilos.css">
 </head>
 
 <body class="contenido">
 
-<h1>Bienvenidos a EnergyFit</h1>
-<h3>Tu centro deportivo de confianza</h3>
+  <h1>Bienvenidos a EnergyFit</h1>
+  <h3>Tu centro deportivo de confianza</h3>
 
-<p>
-En EnergyFit te ayudamos a alcanzar tus metas personales de salud, fuerza y bienestar.
-</p>
+  <p>En EnergyFit te ayudamos a alcanzar tus metas personales de salud, fuerza y bienestar.</p>
 
-<p>
-En nuestra web encontrarás toda la información sobre nuestras actividades, servicios, instalaciones y cómo ponerte en contacto con nosotros.
-</p>
+  <p>En nuestra web encontrarás toda la información sobre nuestras actividades, servicios, instalaciones y cómo ponerte en contacto con nosotros.</p>
 
-<p>
-Contamos con entrenadores profesionales, amplios horarios y una gran variedad de disciplinas deportivas para que encuentres la que mejor se adapte a ti.
-</p>
+  <p>Contamos con entrenadores profesionales, amplios horarios y una gran variedad de disciplinas deportivas para que encuentres la que mejor se adapte a ti.</p>
 
-<p>
-<b>¡Ven a conocernos y empieza hoy mismo a transformar tu cuerpo y tu mente!</b>
-</p>
+  <p><b>¡Ven a conocernos y empieza hoy mismo a transformar tu cuerpo y tu mente!</b></p>
 
-<div>
-  <img src="Imagenes/istockphoto-2075354173-612x612.jpg"
-       title="¡Actívate con EnergyFit!"
-       alt="Personas entrenando en EnergyFit"
-       width="500">
-  <p><b>¡Actívate con EnergyFit!</b></p>
-</div>
+  <div class="bloque-centrado">
+    <img src="Imagenes/istockphoto-2075354173-612x612.jpg"
+         title="¡Actívate con EnergyFit!"
+         alt="Personas entrenando en EnergyFit"
+         width="500">
+    <p><b>¡Actívate con EnergyFit!</b></p>
+  </div>
 
-<p><i>“La energía no se crea ni se destruye… ¡se entrena!”</i></p>
+  <p class="centrado"><i>“La energía no se crea ni se destruye… ¡se entrena!”</i></p>
 
-<hr>
+  <hr>
 
-<p>
-  <a href="12_politica_privacidad.html" target="Contenido">Política de privacidad</a> |
-  <a href="13_aviso_legal.html" target="Contenido">Aviso legal</a>
-</p>
+  <p class="centrado">
+    <a href="12_politica_privacidad.html" target="Contenido">Política de privacidad</a> |
+    <a href="13_aviso_legal.html" target="Contenido">Aviso legal</a>
+  </p>
 
 </body>
 </html>
