--- a/Lenguaje de Marcas/Practicas/ifrmaset/7_cuotas.html
+++ b/Lenguaje de Marcas/Practicas/ifrmaset/7_cuotas.html
@@ -1,42 +1,51 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-<meta charset="UTF-8">
-<link rel="stylesheet" href="Stilos.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cuotas - EnergyFit</title>
+  <link rel="stylesheet" href="Stilos.css">
 </head>
 
 <body class="contenido">
 
-<h1>Cuotas</h1>
+  <h1>💳 CUOTAS</h1>
 
-<table border="1">
-<tr>
-<th>Membresía</th>
-<th>Descripción</th>
-</tr>
-<tr>
-<td>Mensual Básico</td>
-<td>Acceso a gimnasio y vestuarios.</td>
-</tr>
-<tr>
-<td>Mensual Completo</td>
-<td>Acceso a todas las actividades dirigidas.</td>
-</tr>
-<tr>
-<td>Trimestral Premium</td>
-<td>Incluye nutricionista y seguimiento personalizado.</td>
-</tr>
-<tr>
-<td>Anual VIP</td>
-<td>Acceso ilimitado a todas las instalaciones + sesiones mensuales de fisioterapia.</td>
-</tr>
-</table>
+  <p>En EnergyFit te ofrecemos diferentes opciones de membresía para adaptarnos a tus necesidades:</p>
 
-<hr>
-<p>
-<a href="12_politica_privacidad.html" target="Contenido">Política de privacidad</a> |
-<a href="13_aviso_legal.html" target="Contenido">Aviso legal</a>
-</p>
+  <img src="Imagenes/medios de pago .jpg" title="tarjetaso" alt="Medios de pago">
+
+  <table>
+    <tr>
+      <th>Tipo de Membresía</th>
+      <th>Descripción</th>
+    </tr>
+    <tr>
+      <td><strong>Mensual Básico</strong></td>
+      <td>Acceso a gimnasio y vestuarios.</td>
+    </tr>
+    <tr>
+      <td><strong>Mensual Completo</strong></td>
+      <td>Acceso a todas las actividades dirigidas.</td>
+    </tr>
+    <tr>
+      <td><strong>Trimestral Premium</strong></td>
+      <td>Incluye nutricionista y seguimiento personalizado.</td>
+    </tr>
+    <tr>
+      <td><strong>Anual VIP</strong></td>
+      <td>Acceso ilimitado a todas las instalaciones + sesiones mensuales de fisioterapia.</td>
+    </tr>
+  </table>
+
+  <p><strong>¡Cuanto más tiempo te quedes, más ahorras!</strong></p>
+
+  <hr>
+
+  <p class="centrado">
+    <a href="12_politica_privacidad.html" target="Contenido">Política de privacidad</a> |
+    <a href="13_aviso_legal.html" target="Contenido">Aviso legal</a>
+  </p>
 
 </body>
 </html>
