--- a/Lenguaje de Marcas/Practicas/ifrmaset/10_contacto.html
+++ b/Lenguaje de Marcas/Practicas/ifrmaset/10_contacto.html
@@ -1,130 +1,108 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto - EnergyFit</title>
-    <link rel="stylesheet" href="Stilos.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contacto - EnergyFit</title>
+  <link rel="stylesheet" href="Stilos.css">
 </head>
 
 <body class="contenido">
 
-<h1>📬 Ponte en contacto con nosotros</h1>
+  <h1>📬 Ponte en contacto con nosotros</h1>
 
-<p>
-Si tienes alguna duda o deseas más información sobre nuestros servicios, completa el siguiente formulario y nos pondremos en contacto contigo lo antes posible.
-</p>
+  <p class="centrado">
+    Si tienes alguna duda o deseas más información sobre nuestros servicios, completa el siguiente formulario y nos pondremos en contacto contigo lo antes posible.
+  </p>
 
-<form action="11_datos_recibidos.html" method="get">
+  <form action="11_datos_recibidos.html" method="get">
 
-<fieldset>
-    <legend><strong>Datos personales</strong></legend>
+    <fieldset>
+      <legend><strong>Datos personales</strong></legend>
 
-    <div class="campo">
-        <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" name="nombre" required>
-    </div>
+      <label for="nombre">Nombre:</label>
+      <input type="text" id="nombre" name="nombre" required>
 
-    <div class="campo">
-        <label for="apellidos">Apellidos:</label>
-        <input type="text" id="apellidos" name="apellidos" required>
-    </div>
+      <label for="apellidos">Apellidos:</label>
+      <input type="text" id="apellidos" name="apellidos" required>
 
-    <div class="campo">
-        <label for="direccion">Dirección:</label>
-        <input type="text" id="direccion" name="direccion" required>
-    </div>
+      <label for="direccion">Dirección:</label>
+      <input type="text" id="direccion" name="direccion" required>
 
-    <div class="campo">
-        <label for="poblacion">Población:</label>
-        <input type="text" id="poblacion" name="poblacion" required>
-    </div>
+      <label for="poblacion">Población:</label>
+      <input type="text" id="poblacion" name="poblacion" required>
 
-    <div class="campo">
-        <label for="correo">Correo electrónico:</label>
-        <input type="email" id="correo" name="correo" required>
-    </div>
+      <label for="correo">Correo electrónico:</label>
+      <input type="email" id="correo" name="correo" required>
 
-    <div class="campo">
-        <label for="telefono">Teléfono:</label>
-        <input type="text" id="telefono" name="telefono">
-    </div>
+      <label for="telefono">Teléfono:</label>
+      <input type="text" id="telefono" name="telefono">
 
-    <div class="campo">
-        <label for="dni">DNI:</label>
-        <input type="text" id="dni" name="dni">
-    </div>
-</fieldset>
+      <label for="dni">DNI:</label>
+      <input type="text" id="dni" name="dni">
+    </fieldset>
 
-<br>
+    <fieldset>
+      <legend><strong>Género</strong></legend>
 
-<fieldset>
-    <legend><strong>Género</strong></legend>
+      <input type="radio" id="hombre" name="sexo" value="Hombre">
+      <label class="inline" for="hombre">Hombre</label>
 
-    <input type="radio" id="hombre" name="sexo" value="Hombre">
-    <label for="hombre">Hombre</label><br>
+      <input type="radio" id="mujer" name="sexo" value="Mujer">
+      <label class="inline" for="mujer">Mujer</label>
 
-    <input type="radio" id="mujer" name="sexo" value="Mujer">
-    <label for="mujer">Mujer</label><br>
+      <input type="radio" id="otro" name="sexo" value="Otro">
+      <label class="inline" for="otro">Otro</label>
 
-    <input type="radio" id="otro" name="sexo" value="Otro">
-    <label for="otro">Otro</label><br><br>
+      <label for="genero">Otro género (especifique):</label>
+      <input type="text" id="genero" name="genero">
+    </fieldset>
 
-    <div class="campo">
-        <label for="genero">Otro género (especifique):</label>
-        <input type="text" id="genero" name="genero">
-    </div>
-</fieldset>
+    <fieldset>
+      <legend><strong>Actividades de interés</strong></legend>
 
-<br>
+      <input type="checkbox" id="spinning" name="actividad" value="Spinning">
+      <label class="inline" for="spinning">Spinning</label>
 
-<fieldset>
-    <legend><strong>Actividades de interés</strong></legend>
+      <input type="checkbox" id="zumba" name="actividad" value="Zumba">
+      <label class="inline" for="zumba">Zumba</label>
 
-    <input type="checkbox" id="spinning" name="actividad" value="Spinning">
-    <label for="spinning">Spinning</label><br>
+      <input type="checkbox" id="yoga" name="actividad" value="Yoga">
+      <label class="inline" for="yoga">Yoga</label>
 
-    <input type="checkbox" id="zumba" name="actividad" value="Zumba">
-    <label for="zumba">Zumba</label><br>
+      <input type="checkbox" id="pilates" name="actividad" value="Pilates">
+      <label class="inline" for="pilates">Pilates</label>
 
-    <input type="checkbox" id="yoga" name="actividad" value="Yoga">
-    <label for="yoga">Yoga</label><br>
+      <input type="checkbox" id="crossfit" name="actividad" value="CrossFit">
+      <label class="inline" for="crossfit">CrossFit</label>
 
-    <input type="checkbox" id="pilates" name="actividad" value="Pilates">
-    <label for="pilates">Pilates</label><br>
+      <input type="checkbox" id="natacion" name="actividad" value="Natación">
+      <label class="inline" for="natacion">Natación</label>
+    </fieldset>
 
-    <input type="checkbox" id="crossfit" name="actividad" value="CrossFit">
-    <label for="crossfit">CrossFit</label><br>
+    <fieldset>
+      <legend><strong>Comentarios</strong></legend>
+      <textarea name="comentarios" rows="5" cols="40">Escriba aquí sus comentarios</textarea>
+    </fieldset>
 
-    <input type="checkbox" id="natacion" name="actividad" value="Natación">
-    <label for="natacion">Natación</label><br>
-</fieldset>
+    <fieldset>
+      <input type="checkbox" id="privacidad" name="privacidad" required>
+      <label class="inline" for="privacidad">He leído y acepto la política de privacidad.</label>
 
-<br>
+      <br><br>
 
-<fieldset>
-    <legend><strong>Comentarios</strong></legend>
-    <textarea name="comentarios" rows="5" cols="40">Escriba aquí sus comentarios</textarea>
-</fieldset>
+      <input type="submit" value="Enviar">
+      <input type="reset" value="Borrar">
+    </fieldset>
 
-<br>
+  </form>
 
-<fieldset>
-    <input type="checkbox" id="privacidad" name="privacidad" required>
-    <label for="privacidad">He leído y acepto la política de privacidad.</label><br><br>
+  <hr>
 
-    <input type="submit" value="Enviar">
-    <input type="reset" value="Borrar">
-</fieldset>
-
-</form>
-
-<hr>
-
-<p>
-  <a href="12_politica_privacidad.html" target="Contenido">Política de privacidad</a> |
-  <a href="13_aviso_legal.html" target="Contenido">Aviso legal</a>
-</p>
+  <p class="centrado">
+    <a href="12_politica_privacidad.html" target="Contenido">Política de privacidad</a> |
+    <a href="13_aviso_legal.html" target="Contenido">Aviso legal</a>
+  </p>
 
 </body>
 </html>
