--- a/Lenguaje de Marcas/Practicas/ifrmaset/12_politica_privacidad.html
+++ b/Lenguaje de Marcas/Practicas/ifrmaset/12_politica_privacidad.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-<meta charset="UTF-8">
-<link rel="stylesheet" href="Stilos.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Política de privacidad - EnergyFit</title>
+  <link rel="stylesheet" href="Stilos.css">
 </head>
 
 <body class="contenido">
 
-<h1>Política de Privacidad</h1>
-
-<p>
-Sección desarrollada para la práctica de Lenguajes de Marcas.
-</p>
+  <h1>
+    ESTA ES
+    LA SECCIÓN DE POLÍTICA DE PRIVACIDAD DE LA WEB DE NUESTRO ESTABLECIMIENTO
+    DEPORTIVO. DESARROLLADA EN EL MÓDULO DE LENGUAJES DE MARCAS Y SISTEMAS DE
+    GESTIÓN DE INFORMACIÓN POR:
+    <br><br><strong>DIEGO ARMANDO MAYOR RODRIGUEZ 1-DAM</strong>
+  </h1>
 
 </body>
 </html>
