--- a/Lenguaje de Marcas/Practicas/ifrmaset/5_quienes_somos.html
+++ b/Lenguaje de Marcas/Practicas/ifrmaset/5_quienes_somos.html
@@ -1,40 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-<meta charset="UTF-8">
-<link rel="stylesheet" href="Stilos.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Quiénes Somos - EnergyFit</title>
+  <link rel="stylesheet" href="Stilos.css">
 </head>
 
 <body class="contenido">
 
-<h1>Quiénes Somos</h1>
+  <h1>Quiénes Somos</h1>
 
-<p>
-EnergyFit nació con la misión de promover un estilo de vida saludable y activo.
-</p>
+  <p>EnergyFit nació con la misión de promover un estilo de vida saludable y activo.</p>
 
-<p>
-Contamos con más de 10 años de experiencia en el sector del fitness y el entrenamiento personal.
-</p>
+  <p>Contamos con más de 10 años de experiencia en el sector del fitness y el entrenamiento personal.</p>
 
-<p>
-Nuestro equipo está formado por <b>monitores cualificados, fisioterapeutas y nutricionistas</b> que te ayudarán a lograr tus objetivos de forma segura y eficaz.
-</p>
+  <p>Nuestro equipo está formado por <b>monitores cualificados, fisioterapeutas y nutricionistas</b> que te ayudarán a lograr tus objetivos de forma segura y eficaz.</p>
 
-<p>
-Apostamos por la <b>cercanía, la motivación y el acompañamiento personalizado</b> en cada paso de tu progreso.
-</p>
+  <p>Apostamos por la <b>cercanía, la motivación y el acompañamiento personalizado</b> en cada paso de tu progreso.</p>
 
-<div>
-  <img src="Imagenes/Quienes somos.png" width="500">
-  <p><i>“Tu bienestar es nuestra meta.”</i></p>
-</div>
+  <div class="bloque-centrado">
+    <img src="Imagenes/Quienes somos.png"
+         alt="Equipo de entrenadores EnergyFit"
+         title="Nuestro equipo EnergyFit"
+         width="500">
+    <p><i>“Tu bienestar es nuestra meta.”</i></p>
+  </div>
 
-<hr>
-<p>
-<a href="12_politica_privacidad.html" target="Contenido">Política de privacidad</a> |
-<a href="13_aviso_legal.html" target="Contenido">Aviso legal</a>
-</p>
+  <hr>
+
+  <p class="centrado">
+    <a href="12_politica_privacidad.html" target="Contenido">Política de privacidad</a> |
+    <a href="13_aviso_legal.html" target="Contenido">Aviso legal</a>
+  </p>
 
 </body>
 </html>
