--- a/Lenguaje de Marcas/Practicas/ifrmaset/6_actividades.html
+++ b/Lenguaje de Marcas/Practicas/ifrmaset/6_actividades.html
@@ -1,34 +1,58 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-<meta charset="UTF-8">
-<link rel="stylesheet" href="Stilos.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Actividades - EnergyFit</title>
+  <link rel="stylesheet" href="Stilos.css">
 </head>
 
 <body class="contenido">
 
-<h1>Nuestras Actividades Deportivas</h1>
+  <h1>🏋️‍♀️ Nuestras Actividades Deportivas 🏋️‍♀️</h1>
 
-<table border="1">
-<tr>
-<td>Spinning</td>
-<td>Zumba</td>
-</tr>
-<tr>
-<td>Yoga</td>
-<td>Pilates</td>
-</tr>
-<tr>
-<td>Crossfit</td>
-<td>Natación</td>
-</tr>
-</table>
+  <table>
+    <tr>
+      <td>
+        <img src="Imagenes/spining.jpg" height="400" alt="Spinning">
+        <p><strong>Spinning:</strong> Ejercicio cardiovascular en bicicleta estática con música y ritmo. Ideal para mejorar la resistencia y quemar calorías.</p>
+      </td>
+      <td>
+        <img src="Imagenes/zumba.jpg" height="400" alt="Zumba">
+        <p><strong>Zumba:</strong> Combina baile y ejercicio aeróbico. ¡Diviértete mientras te pones en forma!</p>
+      </td>
+    </tr>
 
-<hr>
-<p>
-<a href="12_politica_privacidad.html" target="Contenido">Política de privacidad</a> |
-<a href="13_aviso_legal.html" target="Contenido">Aviso legal</a>
-</p>
+    <tr>
+      <td>
+        <img src="Imagenes/yoga.jpg" height="400" alt="Yoga">
+        <p><strong>Yoga:</strong> Conecta cuerpo y mente a través de la respiración, la relajación y las posturas físicas.</p>
+      </td>
+      <td>
+        <img src="Imagenes/pilates.jpg" alt="Pilates">
+        <p><strong>Pilates:</strong>Fortalece tu zona abdominal, mejora la postura y aumenta la flexibilidad.</p>
+      </td>
+    </tr>
+
+    <tr>
+      <td>
+        <img src="Imagenes/crossfit.jpg" height="400" alt="Crossfit">
+        <p><strong>Crossfit:</strong>Entrenamiento de alta intensidad con movimientos funcionales. Perfecto para quienes buscan superar sus límites.</p>
+      </td>
+
+      <td>
+        <img src="Imagenes/natacion.jpg" height="400" alt="Natacion">
+        <p><strong>Natacion:</strong>Actividad completa que trabaja todo el cuerpo, mejora la respiración y reduce el estrés.</p>
+      </td>
+    </tr>
+  </table>
+
+  <hr>
+
+  <p class="centrado">
+    <a href="12_politica_privacidad.html" target="Contenido">Política de privacidad</a> |
+    <a href="13_aviso_legal.html" target="Contenido">Aviso legal</a>
+  </p>
 
 </body>
 </html>
