--- a/Lenguaje de Marcas/Practicas/ifrmaset/8_salas.html
+++ b/Lenguaje de Marcas/Practicas/ifrmaset/8_salas.html
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-<meta charset="UTF-8">
-<link rel="stylesheet" href="Stilos.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Salas - EnergyFit</title>
+  <link rel="stylesheet" href="Stilos.css">
 </head>
 
 <body class="contenido">
 
-<h1>Salas e Instalaciones</h1>
+  <h1>🏢 SALAS E INSTALACIONES</h1>
 
-<ul>
-<li>💪 Sala de musculación de última generación</li>
-<li>🚴 Sala de cardio con cintas, elípticas y bicicletas</li>
-<li>🧘 Salas polivalentes para clases dirigidas</li>
-<li>🏊 Piscina climatizada</li>
-<li>🧖 Zona de spa y sauna</li>
-<li>☕ Cafetería y tienda deportivas</li>
-</ul>
+  <p>Nuestro centro cuenta con modernas instalaciones equipadas con la última tecnología en fitness:</p>
 
-<img src="Imagenes/Salas.png" width="500">
+  <ul>
+    <li>💪 Sala de musculación de última generación</li>
+    <li>🚴 Sala de cardio con cintas, elípticas y bicicletas</li>
+    <li>🧘 Salas polivalentes para clases dirigidas</li>
+    <li>🏊 Piscina climatizada</li>
+    <li>🧖 Zona de spa y sauna</li>
+    <li>☕ Cafetería y tienda deportivas</li>
+  </ul>
 
-<p>Todo diseñado para que disfrutes al máximo tu experiencia deportiva.</p>
+  <div class="bloque-centrado">
+    <img src="Imagenes/Salas.png" alt="Instalaciones EnergyFit" width="600">
+  </div>
 
-<hr>
-<p>
-<a href="12_politica_privacidad.html" target="Contenido">Política de privacidad</a> |
-<a href="13_aviso_legal.html" target="Contenido">Aviso legal</a>
-</p>
+  <p class="centrado">Todo diseñado para que disfrutes al maximo tu experiencia deportiva.</p>
+
+  <hr>
+
+  <p class="centrado">
+    <a href="12_politica_privacidad.html" target="Contenido">Política de privacidad</a> |
+    <a href="13_aviso_legal.html" target="Contenido">Aviso legal</a>
+  </p>
 
 </body>
 </html>
