--- a/Lenguaje de Marcas/Practicas/ifrmaset/9_donde_estamos.html
+++ b/Lenguaje de Marcas/Practicas/ifrmaset/9_donde_estamos.html
@@ -1,30 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-<meta charset="UTF-8">
-<link rel="stylesheet" href="Stilos.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dónde estamos - EnergyFit</title>
+  <link rel="stylesheet" href="Stilos.css">
 </head>
 
 <body class="contenido">
 
-<h1>Dónde Estamos</h1>
+  <h1>Donde Estamos Ubicados</h1>
 
-<a href="https://maps.app.goo.gl/uL1TRJnPCQaUpruN9" target="_blank">
-<img src="Imagenes/ies serpis.jpg" width="600">
-</a>
+  <div class="bloque-centrado">
+    <a href="https://maps.app.goo.gl/uL1TRJnPCQaUpruN9" target="_blank">
+      <img src="Imagenes/ies serpis.jpg" alt="Ubicación EnergyFit en Google Maps" title="Nuestra Ubicacion" width="600">
+    </a>
+  </div>
 
-<p>
-🏢 Dirección: C/ de José María Haro, 63, Algirós, 46022 València, Valencia<br>
-📞 Teléfono: 912 345 678<br>
-📧 Correo: info@energyfit.es<br>
-🕓 Horario: Lunes a viernes de 7:00 a 22:00 — Sábados de 9:00 a 20:00
-</p>
+  <p class="centrado">
+    🏢 Dirección: C/ de José María Haro, 63, Algirós, 46022 València, Valencia<br>
+    📞 Teléfono: 912 345 678<br>
+    📧 Correo: info@energyfit.es<br>
+    🕓 Horario: Lunes a viernes de 7:00 a 22:00 — Sábados de 9:00 a 20:00
+  </p>
 
-<hr>
-<p>
-<a href="12_politica_privacidad.html" target="Contenido">Política de privacidad</a> |
-<a href="13_aviso_legal.html" target="Contenido">Aviso legal</a>
-</p>
+  <hr>
+
+  <p class="centrado">
+    <a href="12_politica_privacidad.html" target="Contenido">Política de privacidad</a> |
+    <a href="13_aviso_legal.html" target="Contenido">Aviso legal</a>
+  </p>
 
 </body>
 </html>
