--- a/Lenguaje de Marcas/Practicas/Html y CSS/Practica_13/ImagenVectores.html
+++ b/Lenguaje de Marcas/Practicas/Html y CSS/Practica_13/ImagenVectores.html
@@ -54,6 +54,32 @@
     <polygon points ="60,15,105,100,15,100" fill="red" stroke="green" stroke-width="5" fill-rule="evenodd"/>
   </svg>
 
+<p>Palabra con inclinacion</p>
+<svg width="300" height="80">
+  <text x="20" y="55" font-size="40" fill="red" stroke="black">
+    Nom<tspan font-style="italic">b</tspan>re
+  </text>
+</svg>
+
+<svg width="200" height="200">
+  <!-- Cuadro -->
+  <rect x="20" y="20" width="160" height="160"
+        fill="none" stroke="black" stroke-width="3"/>
+
+  <!-- Líneas que salen TODAS del mismo punto -->
+  <!-- Punto común: (100,100) -->
+  <line x1="100" y1="100" x2="20"  y2="20"  stroke="black"/>
+  <line x1="100" y1="100" x2="100" y2="20"  stroke="black"/>
+  <line x1="100" y1="100" x2="180" y2="20"  stroke="black"/>
+  <line x1="100" y1="100" x2="180" y2="100" stroke="black"/>
+  <line x1="100" y1="100" x2="180" y2="180" stroke="black"/>
+  <line x1="100" y1="100" x2="100" y2="180" stroke="black"/>
+  <line x1="100" y1="100" x2="20"  y2="180" stroke="black"/>
+  <line x1="100" y1="100" x2="20"  y2="100" stroke="black"/>
+</svg>
+
+
+
 
 
 </body>
